# GFEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini  presets.cfg
data/: versions.json
data/ai/: B1 Battle Droid.json  grunt_ai.json  heavy_ai.json
data/allies/: Clone Trooper.json
data/characters/: clone_trooper.json
data/enemies/: Droideka Battle Droid.json  grunt.json  heavy.json  sniper.json
data/hitboxes/: B1 Battle Droid.json  grunt.json  sniper.json
data/maps/: firebase.json
data/weapons/: DC-15A Blaster Rifle.json  DC-17 Blaster Pistol.json  E5 Blaster Rifle.json  T-21 Heavy Blaster.json  Z-6 Rotary Blaster.json  blaster_pistol.json  blaster_rifle.json  heavy_blaster.json  sniper_rifle.json
editor/include/: EditorApp.hpp
editor/include/modules/: BalanceEditor.hpp  HitboxEditor.hpp
editor/include/ui/: HomeScreen.hpp
editor/include/viewport/: FreeCameraViewport.hpp
editor/src/: EditorApp.cpp  main.cpp
editor/src/modules/: BalanceEditor.cpp  HitboxEditor.cpp
editor/src/ui/: HomeScreen.cpp
editor/src/viewport/: FreeCameraViewport.cpp
include/mini/core/: Application.hpp  Audio.hpp  Clock.hpp  GameConfig.hpp  GameState.hpp  InputManager.hpp  Renderer.hpp  Window.hpp
include/mini/ecs/: Components.hpp  Entity.hpp  ISystem.hpp  World.hpp
include/mini/ecs/components/: AbilityComponent.hpp  AiComponent.hpp  BulletComponent.hpp  ColliderComponent.hpp  HealthComponent.hpp  HitboxComponent.hpp  MeshRendererComponent.hpp  TeamComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
include/mini/ecs/systems/: AiSystem.hpp  CombatSystem.hpp  MovementSystem.hpp
include/mini/game/: MatchSettings.hpp  PlayerController.hpp  Weapon.hpp
include/mini/game/data/: DefinitionRegistry.hpp  Definitions.hpp
include/mini/game/game_modes/: ConquestMode.hpp
include/mini/physics/: Collision.hpp
include/mini/platform/: OpenGL.hpp
include/mini/render/: Camera.hpp  HUD.hpp  LauncherScreen.hpp  MainMenuScreen.hpp  Mesh.hpp  Model.hpp  OptionsMenu.hpp  PreMatchMenu.hpp  Shader.hpp  Texture.hpp  Ui2D.hpp
src/: main.cpp
src/core/: Application.cpp  Audio.cpp  Clock.cpp  InputManager.cpp  Renderer.cpp  Window.cpp
src/ecs/: World.cpp
src/ecs/systems/: AiSystem.cpp  CombatSystem.cpp  MovementSystem.cpp
src/game/: PlayerController.cpp
src/game/data/: DefinitionRegistry.cpp
src/game/game_modes/: ConquestMode.cpp
src/physics/: Collision.cpp
src/platform/: OpenGL.cpp
src/render/: Camera.cpp  HUD.cpp  LauncherScreen.cpp  MainMenuScreen.cpp  Mesh.cpp  Model.cpp  OptionsMenu.cpp  PreMatchMenu.cpp  Shader.cpp  Texture.cpp  Ui2D.cpp
